# LengendOfUni-rebuild

./: .gitignore  LICENSE  README.md  ReadMe.txt  index.html
02_Project_Documentation/: ART_OVERHAUL_DOCUMENTATION.md  ART_PROMPTS_GUIDE.md  AUDIT_20260512_BUGFIXES.md  AUDIT_20260518_CODE_QUALITY.md  AUDIT_20260518_STRATEGY_CURVE.md  AUDIT_20260520_RANDOM_EVENTS_CANON_ANALYSIS.md  AUDIT_20260525_FULL_NARRATIVE_PHYSICS_AUDIT.md  AUDIT_20260605_CG_LOSS_ANALYSIS.md  AUDIT_20260605_REVISED_ITERATION_STATUS.md  AUDIT_20260608_EVENT_TIMELINE_AUDIT.md  AUDIT_20260612_CYCLE_AUDIT_V2.md  AUDIT_20260615_ENDING_SYSTEM_AUDIT.md  BUGFIX_AUDIT_V2.md  DEVELOPMENT_DOC_V2.md  DEVELOPMENT_HISTORY.md  DEV_HISTORY_LOG.md  DEV_HISTORY_V4.md  DEV_HISTORY_V5.md  EXEC_20260514_TASK.md  EXEC_20260514_WALKTHROUGH.md  EXEC_20260514_WALKTHROUGH_FINAL.md  EXEC_20260519_REORGANIZATION_PLAN.md  EXEC_20260519_REORGANIZATION_TASK.md  EXEC_20260519_REORGANIZATION_WALKTHROUGH.md  EXEC_20260520_EVENT_SYSTEM_OVERHAUL_WALKTHROUGH.md  EXEC_20260520_TACTICAL_BULLETIN_BOARD_WALKTHROUGH.md  EXEC_20260525_FIX_AUDIT_PLAN.md  EXEC_20260525_FIX_AUDIT_WALKTHROUGH.md  EXEC_20260525_NARRATIVE_FLOW_REMEDIATION.md  EXEC_20260602_DEEP_AUDIT_FIXES.md  EXEC_20260605_ART_ASSETS_AND_EVENT_FIXES.md  EXEC_20260605_ITERATION_STAGES_ABC_REPORT.md  EXEC_20260608_EVENT_AUDIT_IMPLEMENTATION_PLAN.md  EXEC_20260608_EVENT_AUDIT_WALKTHROUGH.md  EXEC_20260612_APPENDIX_B_IMPLEMENTATION.md  EXEC_20260612_CG_ASSETS_UPDATE.md  (+38 more)
03_Web_Rebuild/src-tauri/: Cargo.toml  tauri.conf.json
03_Web_Rebuild/src-tauri/src/: steamworks.rs
(+376 files in other folders)
