[package]
name = "legend-of-uni"
version = "1.0.0"
description = "宇宙群英传 - 三体宇宙策略叙事游戏"
authors = ["Emberois"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Steamworks SDK (禁用 - 预留接口)
# steamworks = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]